# mobots

./: .gitignore  README  install_boost_1_51.sh  mobots0.launch  mobots1.launch  mobots2.launch  server.launch  server2.launch  setup.sh  stack.xml
android_teleop/: mobots_teleop.apk
config/: CMakeLists.txt  mainpage.dox  manifest.xml
david_sim/: mainpage.dox  manifest.xml
feature_detector/: CMakeLists.txt  Makefile  feature_detector.kdev4  mainpage.dox  manifest.xml
feature_detector/include/feature_detector/: FeaturesFinder.h  FeaturesMatcher.h  MessageBridge.h  ParallelMatcher.h
feature_detector/launch/: feature_detector.launch
feature_detector/pics/: VID5.xml  camera.yml  camera_values.xml  camera_valuesold.xml  default.xml
feature_detector/src/: .kdev_include_paths  FeatureDetector.cpp  FeaturesFinder.cpp  FeaturesFinder.h  FeaturesMatcher.cpp  FeaturesMatcher.h  MessageBridge.cpp  ParallelMatcher.cpp  ParallelMatcher.h  README  camera_calibration.cpp  draw.cpp  draw.h  profile.h  qsrt_bsrch.cpp  removeDistortion.cpp  ror.cpp  ror.h  ror2.cpp  ror3.cpp  ror_example.c  ror_int.h  test2.cpp  testFeatures.cpp  testParallelMatcher.cpp  testPics.cpp
feature_detector/src/test/: brightnessCorrection.cpp  draw.cpp  imgtest.cpp  makeMatch.cpp  removeDistortion.cpp  testFeatures.cpp  testPics.cpp
feature_detector/testImages/: image-001.tif  image-002.tif  image-003.tif  image-004.tif  image-005.tif  image-006.tif  image-007.tif  image-008.tif  image-009.tif  image-010.tif  image.tif
hardware_driver/: CMakeLists.txt  mainpage.dox  manifest.xml
hardware_driver/stm32vl/Client/: CMakeLists.txt  ComProtocol.cpp  ComProtocol.hpp  ProtocolHandler.cpp  ProtocolHandler.hpp  UARTCommunication.cpp  UARTCommunication.hpp  main.cpp  main2.cpp
imageMatcher/: FeaturesFinder.cpp  FeaturesFinder.h  FeaturesMatcher.cpp  FeaturesMatcher.h  Makefile  homo.cpp  makefile.sh  ror.c  ror.cpp  ror.h  testFeatures  testFeatures.cpp
imageWorker/: Boost_License  manifest.xml
image_map_display/: mainpage.dox  manifest.xml
image_store/: CMakeLists.txt  manifest.xml  plugin_description.xml
map_visualisation/: mainpage.dox
map_visualization/: CMakeLists.txt  mainpage.dox  manifest.xml  plugin_description.xml
map_visualization/bak/: mobots_info.ui
map_visualization/include/: definitions.h
map_visualization/include/map_visualization/: definitions.h
map_visualization/src/: CMakeLists.txt  guiTest.cpp  image_map_display.cpp  image_map_display.h  image_map_info.h  image_map_info.ui  image_map_visual.cpp  image_map_visual.h  image_map_widget.cpp  image_view.cpp
map_visualization/src/Mobots_Info/: Mobots_Info.pro  main.cpp  mobots_info.cpp  resedit.qrc
map_visualization/src/data_store/: CMakeLists.txt  data_store.cpp  image_info.cpp
map_visualization/src/image_map_display/: CMakeLists.txt  Mobots_Info.pro  example1  example2  image_map_display.cpp  image_map_display.h  image_map_visual.cpp  image_map_visual.h  mobots_info.cpp  mobots_info.h  send_test_msgs.py
map_visualization/src/image_store/: CMakeLists.txt  errorStatus  errorStatus.cpp  image_info.cpp  image_info_data.cpp  image_store.cpp  image_store_test.cpp
map_visualization/src/map_visualization/srv/: _GetGlobalPose.py  _GetImage.py  _GetPoseWithCovarianceStamped.py  _SetGlobalPose.py  _SetPoseWithCovarianceStamped.py  __init__.py
map_visualization/src/rviz_plugin_map/: CMakeLists.txt  image_map_display.cpp  image_map_display.h  image_map_info.cpp  image_map_info.ui  image_map_panel.h  image_map_visual.h  image_map_widget.cpp  image_map_widget.h
map_visualization/src/test/: guiTest.cpp
map_visualization/src/toro_wrapper/: manifest.xml
map_visualization/srv/: GetImage.srv  GetImageWithPose.srv  RemoteProcedureCall.srv
map_visualization_helper/: CMakeLists.txt  manifest.xml  plugin_description.xml
map_visualization_helper/src/: image_map_info.cpp  image_map_info.h  image_map_info.ui  image_map_model.cpp  image_map_model.h  image_map_panel.cpp  image_map_panel.h  image_map_waypoint.cpp  image_map_waypoint.h  main.cpp  test_image_map_info.cpp
mobots_common/: CMakeLists.txt  manifest.xml
mobots_msgs/: mainpage.dox  manifest.xml
mobots_simulation/: CMakeLists.txt  README  mainpage.dox  manifest.xml  manifest.xml~
mobots_simulation/Media/materials/textures/: map.material
mobots_simulation/launch/: empty.world  empty_world.launch  gazeboWrapper.sh  image_view.launch  launchwrapper.sh  launchwrapper.sh~  mobot.launch  mobot_in_empty_world.launch  mobots_world.launch  mobox.launch  moboxWrapper.sh  streetmap.launch  streetmap.launch~  usb_cam.launch
mobots_simulation/models/: gazebo_camera.urdf~  mobot.urdf  mobot.urdf.xacro
mobots_simulation/src/: .keyboard.cpp.kate-swp  ImageHandler.cpp  ImageHandler.h  Twist2.cpp  Twist2.cpp~  gazebo_simul.cpp  image_worker.cpp  keyboard.cpp  mobots_teleop_bridge.cpp  mobox_simul.cpp
mobots_simulation/stitching/: findTrans
mobots_simulation/worlds/: mobots.world
mobots_simulation/worlds/Media/materials/scripts/: mobots_simulation.material
mobots_srvs/: .directory  mainpage.dox  manifest.xml
rviz_plugin_display/: CMakeLists.txt  manifest.xml  plugin_description.xml
rviz_plugin_display/src/: CMakeLists.txt  Makefile  image_map_display.cpp  image_map_display.h  image_map_info.cpp  image_map_panel.cpp  image_map_test.cpp  image_map_visual.cpp  image_map_visual.h  mobots_info.cpp  mobots_info.h
shutter/: CMakeLists.txt  CMakeLists_lib.txt  Makefile  Makefile.backup  boost_CMakeLists.txt  lib__CMakeLists.txt  mainpage.dox  manifest.xml
shutter/launch/: manualShutter.launch  shutter.launch  usb_cam.launch
shutter/lib/generate/: CMakeLists.txt  geometry.cpp  geometry.h
shutter/src/: geometry.cpp  geometry.h  manualShutter.cpp  shutter.cpp  shutter.h  shutter2.cpp  shutter3.cpp  shutter4.cpp  shutterTest.cpp
shutter/src/libusb_cam/: usb_cam.cpp  usb_cam.h
shutter/src/libusb_cam/.svn/: all-wcprops  entries
shutter/src/shutter/msg/: _ImagePoseID.py  __init__.py
shutter/src/shutter/srv/: __init__.py  _delta.py
shutter/srv/: delta.srv
stm32vl/: led.c  (+18 more)
(+353 files in other folders)
